--- a/app/src/at-nguyenha/res/values/strings.xml
+++ b/app/src/at-nguyenha/res/values/strings.xml
@@ -38,8 +38,9 @@
     <string name="menu_title_delete">Delete</string>
     <string name="textview_text_add_newfeed">Add something to Newfeed</string>
     <string name="dialog_title_error">Error</string>
-    <string name="dialog_text_ok">Ok</string>
+    <string name="dialog_text_ok">OK</string>
     <string name="dialog_text_cancel">Cancel</string>
-
+    <string name="dialog_title_delete">Delete newfeed</string>
+    <string name="dialog_message_delete">Are you sure to Delete</string>
 
 </resources>
