--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="textview_12">12</string>
     <string name="textview_likes">Likes</string>
     <string name="textview_chocola">Chocola</string>
+    <string name="button_next">Next</string>
 </resources>
