auto create weight data when swipe screen

--- a/app/src/at-nguyenha/res/values/strings.xml
+++ b/app/src/at-nguyenha/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="textview_text_phone">Phone</string>
     <string name="edittext_hint_phone">+84 386971275</string>
     <string name="button_text_save_profile">Save Profile</string>
+    <string name="button_text_chess">Chessboard</string>
+    <string name="button_text_graph">Graph</string>
 
 </resources>
